Fix grid collapsing

--- a/stylesheets/grid/_classes.scss
+++ b/stylesheets/grid/_classes.scss
@@ -29,7 +29,7 @@
     @include grid-row;
 
     // Collapsing
-    &.#{$collapse} {
+    &.#{$class-modifier}#{$collapse} {
       > .#{$column} {
         @include grid-col-collapse;
       }
